--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Plotly</title>
+<title>Hi, my name is Linh!</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -382,28 +382,23 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Plotly</h1>
+<h1 class="title toc-ignore">Hi, my name is Linh!</h1>
 
 </div>
 
 
-<div id="loading-data" class="section level1">
-<h1>Loading data</h1>
-<p>I’m gonna look at the NYC restaurant inspection data, specifically Asian restaurants in Manhattan.</p>
-<pre class="r"><code>library(tidyverse)
-library(p8105.datasets)
-library(plotly)</code></pre>
-</div>
-<div id="plotly-plots" class="section level1">
-<h1>Plotly plots</h1>
-<div id="scatterplot" class="section level2">
-<h2>Scatterplot</h2>
-</div>
-<div id="boxplot" class="section level2">
-<h2>Boxplot</h2>
-</div>
-<div id="bar-plot" class="section level2">
-<h2>Bar plot</h2>
+<div id="welcome-to-my-website" class="section level1">
+<h1>Welcome to my website</h1>
+<p>I am a first-year MS Biostatistics student at the Columbia University, New York. I am originally from Vietnam but moved to the Seattle, WA 7 years ago for my bachelor degree and have been here ever since.</p>
+<p>This is my best friend, Thomas. He loves hiking, stuffed animals and meeting other humans.</p>
+<p><img src = "image/thomas.jpg" style = "width:75%"></p>
+<div id="link-to-page-within-the-site" class="section level2">
+<h2>Link to page within the site</h2>
+<ul>
+<li><a href="resume.html">Resume</a></li>
+<li><a href="plotly.html">Plotly</a></li>
+<li><a href="dashboard.html">Dashboard</a></li>
+</ul>
 </div>
 </div>
 
